<resources>
    <string name="app_name">Truck Sharing App</string>
    <string-array name="options">
        <item>Home</item>
        <item>Account</item>
        <item>My Orders</item>
    </string-array>
    <string name="user_name">xxxx</string>
    <string name="user_location">xxxx</string>
    <string name="user_date">xxxx</string>
    <string name="order_id">xxxx</string>
    <string name="sender_username">xxxx</string>
    <string name="sender_pick_up_time">xxxx</string>
    <string name="receiver_username">xxxx</string>
    <string name="receiver_drop_of_time">22:00 hrs</string>
    <string name="card_weight">xxxx</string>
    <string name="card_type">xxxx</string>
    <string name="card_width">xxxx</string>
    <string name="card_height">xxxx</string>
    <string name="card_length">xxxx</string>
    <string name="card_quantity">Quantity: 20</string>
</resources>